--- a/Frontend/Portfolio/package.json
+++ b/Frontend/Portfolio/package.json
@@ -5,41 +5,52 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "*",
     "@react-pdf/renderer": "^4.1.6",
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.12",
     "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
+    "d3-color": "^3.1.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.12.1",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.13.0",
     "leetcode-calendar": "^1.0.1",
     "p5": "^1.11.3",
+    "pdfjs-dist": "^5.3.31",
+    "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-geolocated": "^4.3.0",
     "react-github-calendar": "^3.2.2",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
     "react-parallax-tilt": "^1.7.269",
     "react-pdf": "^5.7.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-simple-maps": "^3.0.0",
     "react-typed": "^2.0.12",
     "reading-time": "^1.5.0",
     "redux": "^5.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "resolve-url-loader": "^5.0.0",
+    "three": "^0.176.0",
+    "three-mesh-bvh": "^0.8.0",
     "uuid": "^11.0.5",
-    "vx": "^0.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
